rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_t_t411_1993_IPMSExtendedBodyPartTypeOda.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_t_t411_1993_IPMSExtendedBodyPartTypeOda.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 26, column 2]
    │
    │ 
 26 │  oda-body-part EXTENDED-BODY-PART-TYPE ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 27 │    PARAMETERS  {OdaBodyPartParameters
 28 │                 IDENTIFIED BY  id-et-oda-param},
 29 │    DATA        {OdaData
 30 │                 IDENTIFIED BY  id-et-oda-data}
 31 │  }
 33 │  -- Abstract syntax for ODA body part parameters shall appear in the parameter elements of an IPM
 34 │  -- ExternallyDefinedBodyPart
    │
────╯
